Fix HTML formatting issues in contato.html

--- a/contato.html
+++ b/contato.html
@@ -33,21 +33,21 @@
 
     <!-- WHATSAPP -->
     <a
-      href="https://wa.me/5531993198231"
+     "
       target="_blank"
-      class="contact-link whatsapp"
+      class=
     >
       <span data-key="whatsapp">WhatsApp</span>
-      <small>+55 31 99319-8231</small>
+      <small>1</small>
     </a>
 
     <!-- EMAIL -->
     <a
-      href="mailto:carolina.dibb@gmail.com"
-      class="contact-link email"
+     
+      class=
     >
       <span data-key="email">Email</span>
-      <small>carolina.dibb@gmail.com</small>
+      <small></small>
     </a>
   </div>
 </main>
@@ -59,3 +59,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
