Revise contact section to show WhatsApp and Email
Updated contact section to display contact information visually without links.

--- a/contato.html
+++ b/contato.html
@@ -31,24 +31,17 @@
   <div class="contact-box">
     <h2 data-key="contactSubtitle">Entre em contato</h2>
 
-    <!-- WHATSAPP -->
-    <a
-     "
-      target="_blank"
-      class=
-    >
-      <span data-key="whatsapp">WhatsApp</span>
-      <small>1</small>
-    </a>
+    <!-- WHATSAPP (APENAS VISUAL) -->
+    <div class="contact-link whatsapp">
+      <span>WhatsApp</span>
+      <small>Disponível após contrato</small>
+    </div>
 
-    <!-- EMAIL -->
-    <a
-     
-      class=
-    >
-      <span data-key="email">Email</span>
-      <small></small>
-    </a>
+    <!-- EMAIL (APENAS VISUAL) -->
+    <div class="contact-link email">
+      <span>Email</span>
+      <small>Disponível após contrato</small>
+    </div>
   </div>
 </main>
 
@@ -59,4 +52,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
