Update contact.html structure and content

--- a/contato.html
+++ b/contato.html
@@ -31,15 +31,15 @@
   <div class="contact-box">
     <h2 data-key="contactSubtitle">Entre em contato</h2>
 
-    <!-- WHATSAPP (APENAS VISUAL) -->
+    <!-- WHATSAPP (SEM LINK) -->
     <div class="contact-link whatsapp">
-      <span>WhatsApp</span>
+      <span data-key="whatsapp">WhatsApp</span>
       <small>Disponível após contrato</small>
     </div>
 
-    <!-- EMAIL (APENAS VISUAL) -->
+    <!-- EMAIL (SEM LINK) -->
     <div class="contact-link email">
-      <span>Email</span>
+      <span data-key="email">Email</span>
       <small>Disponível após contrato</small>
     </div>
   </div>
