Add data attributes to contact links
Updated contact links to include data attributes.

--- a/contato.html
+++ b/contato.html
@@ -34,13 +34,13 @@
     <!-- WHATSAPP (SEM LINK) -->
     <div class="contact-link whatsapp">
       <span data-key="whatsapp">WhatsApp</span>
-      <small>Disponível após contrato</small>
+      <small data-key="availableAfterContract">Disponível após contrato</small>
     </div>
 
     <!-- EMAIL (SEM LINK) -->
     <div class="contact-link email">
       <span data-key="email">Email</span>
-      <small>Disponível após contrato</small>
+      <small data-key="availableAfterContract">Disponível após contrato</small>
     </div>
   </div>
 </main>
